ingress-service.yaml
apiVersion: extentions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            serviceName: frontend-cluster-ip-service
            servicePort: 4000
